Аутентификация пользователя, фильтр, разграничение прав доступа